[EFL] LayoutTestController does not support overriding WebKitLoadSiteIconsKey https://bugs.webkit.org/show_bug.cgi?id=85171

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-04
Reviewed by Andreas Kling.

Source/WebKit/efl:

Add a helper function to DumpRenderTreeSupportEfl to override the
"WebKitLoadSiteIconsKey" setting on the view page.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::setLoadsSiteIconsIgnoringImageLoadingSetting):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:

Tools:

Implement support for overriding "WebKitLoadSiteIconsKey" setting in
EFL's LayoutTestController.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::overridePreference):

LayoutTests:

Unskip http/tests/misc/favicon-loads-with-icon-loading-override.html
now that EFL's LayoutTestController support overriding
WebKitLoadSiteIconsKey.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/103170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116097 268f45cc-cd09-0410-ab3c-d52691b4dbfc